--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "storybook-gcp-publisher",
   "version": "1.0.0",
   "main": "index.js",
+  "bin": "index.js",
   "license": "MIT",
   "dependencies": {
     "@google-cloud/storage": "^5.3.0",
