--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "license": "MIT",
   "dependencies": {
     "@google-cloud/storage": "^5.3.0",
+    "commander": "^6.1.0",
+    "convict": "^6.0.0",
     "dotenv": "^8.2.0",
     "globby": "^11.0.1",
     "mkdirp": "^1.0.4",
